2002-07-21  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* Toolbar_pimpl.C: use BufferParams::getLyXTextClass

2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* QToc.h:
	* QToc.C: compile fixes, default to depth_(1)
 
2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* Menubar_pimpl.C: change for removed menubar stuff
 
2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C: reset idle timer on message()
 
2002-07-20  John Levon  <moz@compsoc.man.ac.uk>

	* QLImage.C: various fixes
 
	* QWorkArea.C: set focus proxy 
 
	* qscreen.C: don't show cursor when in command buffer
 
	* Makefile.am:
	* moc/Makefile.am:
	* QMiniBuffer.h:
	* QMiniBuffer.C: 
	* QCommandBuffer.h:
	* QCommandBuffer.C:
	* QCommandEdit.h:
	* QCommandEdit.C:
	* QtView.h:
	* QtView.C: Rudimentary command buffer

2002-07-19  John Levon  <moz@compsoc.man.ac.uk>

	* QWorkArea.C: remove unnecessary include
 
2002-07-18  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C:
	* Toolbar_pimpl.C:
	* lyx_gui.C: verboseDispatch() is now dispatch()
 
2002-07-07  Edwin Leuven  <leuven@fee.uva.nl>

	* QParagraph.[Ch]: Add paragraph dialog
	* QParagraphDialog.[Ch]: 
	* ui/QParagraphDialog.[Ch]: 
	* Makefile.am:
	* Makefile.dialogs:
	* guiapi.C:

2002-07-17  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C: basic statusbar show
 
2002-07-17  John Levon  <moz@compsoc.man.ac.uk>

	* QLImage.C: add using std
 
2002-07-15  John Levon  <moz@compsoc.man.ac.uk>

	* QLImage.h:
	* QLImage.C: remove getPixmap() add isDrawable()
 
2002-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* io_callback.h:
	* lyx_gui.C: make set_read_callback() work
 
2002-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* lyx_gui.C: add set_read_callback()
 
	* Makefile.am: 
	* xforms/*: remove
 
2002-07-13  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C: add a status bar
 
	* Toolbar_pimpl.C: minor fixes 

	* lyx_gui.C: implement hexname() 

2002-07-12  John Levon  <moz@compsoc.man.ac.uk>

	* lyx_gui.C: move init_graphics() to parse_init()
 