@@ -124,6 +124,5 @@ QtView
 Toolbar_pimpl
 
 	- mathed symbols (*) 
-	- openLayoutList() (remove ?)
-	- ::set() ???
+	- set() ?? 
 	- push() ??
