@@ -1,3 +1,8 @@
+2002-07-22  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Toolbar_pimpl.h:
+	* Toolbar_pimpl.C: implement getLayoutList()
+ 
 2002-07-21  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>
 
 	* Toolbar_pimpl.C: use BufferParams::getLyXTextClass
